...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#673AB7"
    tools:context=".Activity3">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragment3"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/topText"
            android:layout_width="wrap_content"
...
